# MapReduce

./: CMakeLists.txt  main.cpp  map_reduce.cpp  map_reduce.h  singlethreadExample.cpp
